@startuml

title Data model

entity "users" {
  * id: int
  --
  * first_name
  * last_name
  * password
  * email
  --
  * created_at
  * updated_at
}

entity "campaigns" {
  * id: int
  --
  * owner_user_id: int <<FK>>
  --
  * title
  * description
  * proposition_type
  * campaign_status
  * start_date
  * end_date
  --
  * created_at
  * updated_at
}

entity "campaigns_users" {
  * id: int
  --
  * campaign_id: int <<FK>>
  * user_id: int <<FK>>
  --
  * public_token
  * access_level
  * is_participant
  --
  * created_at
  * updated_at
}

entity "campaigns_users_status" {
  * id: int
  --
  * campaign_id: int <<FK>>
  * user_id: int <<FK>>
  --
  * status_id
  * date
  --
  * created_at
  * updated_at
}

entity "propositions" {
  * id: int
  --
  * campaign_id: int <<FK>>
  * creator_user_id: int <<FK>>
  --
  * payload
  --
  * created_at
  * updated_at
}

entity "users_propositions_results" {
  * id: int
  --
  * campaign_id: int <<FK>>
  * user_id: int <<FK>>
  * proposition_id: int <<FK>>
  --
  * rank
  --
  * created_at
  * updated_at
}

entity "users_propositions_elo_results" {
  * id: int
  --
  * campaign_id: int <<FK>>
  * user_id: int <<FK>>
  * proposition_id: int <<FK>>
  --
  * elo_score
  * display_count
  --
  * created_at
  * updated_at
}



campaigns --> users
propositions --> campaigns
propositions --> users
campaigns_users --> users
campaigns_users --> campaigns
campaigns_users_status --> users
campaigns_users_status --> campaigns

users_propositions_results --> users
users_propositions_results --> campaigns
users_propositions_results --> propositions

users_propositions_elo_results --> users
users_propositions_elo_results --> campaigns
users_propositions_elo_results --> propositions

@enduml
